--- a/src/main/resources/com/example/librarymanagementsystem2/dashboardDesign.css
+++ b/src/main/resources/com/example/librarymanagementsystem2/dashboardDesign.css
@@ -1,3 +1,7 @@
+.audio-toggle{
+    -fx-background-color: transparent;
+    -fx-cursor: hand;
+}
 .top-form{
     -fx-background-color: white;
     -fx-border-color: black;
