--- a/src/main/resources/com/example/librarymanagementsystem2/userDashboard.fxml
+++ b/src/main/resources/com/example/librarymanagementsystem2/userDashboard.fxml
@@ -54,7 +54,7 @@
                     <left>
                         <AnchorPane prefHeight="555.0" prefWidth="199.0" styleClass="nav-form" stylesheets="@dashboardDesign.css" BorderPane.alignment="CENTER">
                             <children>
-                        <Button layoutX="61.0" layoutY="474.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="30.0" styleClass="audio-toggle" stylesheets="@dashboardDesign.css">
+                        <Button fx:id="nextAudio" layoutX="61.0" layoutY="474.0" mnemonicParsing="false" onAction="#setAudio" prefHeight="40.0" prefWidth="30.0" styleClass="audio-toggle" stylesheets="@dashboardDesign.css">
                            <graphic>
                               <FontAwesomeIcon glyphName="FORWARD" />
                            </graphic>
