--- a/src/main/resources/com/example/librarymanagementsystem2/login-view.fxml
+++ b/src/main/resources/com/example/librarymanagementsystem2/login-view.fxml
@@ -77,7 +77,7 @@
                   </Button>
                </children>
             </AnchorPane>
-                <AnchorPane fx:id="side_form" prefHeight="600.0" prefWidth="550.0" styleClass="gradient" stylesheets="@loginDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <AnchorPane fx:id="side_form" prefHeight="600.0" prefWidth="550.0" styleClass="gradientAdmin" stylesheets="@loginDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <children>
                         <Button fx:id="side_CreateBtn" layoutX="40.0" layoutY="346.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="40.0" prefWidth="220.0" styleClass="create-btn" stylesheets="@loginDesign.css" text="Create new Account" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="165.0" />
                   <Button fx:id="side_alreadyHave" layoutX="40.0" layoutY="346.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="40.0" prefWidth="220.0" styleClass="create-btn" stylesheets="@loginDesign.css" text="Already have an Account" visible="false" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="165.0" />
