--- a/src/main/resources/com/example/librarymanagementsystem2/userDashboard.fxml
+++ b/src/main/resources/com/example/librarymanagementsystem2/userDashboard.fxml
@@ -281,6 +281,14 @@
                               <String fx:value="shadow" />
                            </styleClass>
                         </ToggleButton>
+                        <Button layoutX="1.0" layoutY="363.0" mnemonicParsing="false" onAction="#openSnakeBotWindow" prefHeight="40.0" prefWidth="116.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="SnakeBot" textFill="#006370">
+                           <graphic>
+                              <FontAwesomeIcon fill="#006370" glyphName="CUBE" size="2em" text="" />
+                           </graphic>
+                           <font>
+                              <Font name="Arial" size="14.0" />
+                           </font>
+                        </Button>
                             </children>
                         </AnchorPane>
                </left>
