--- a/src/main/resources/com/example/librarymanagementsystem2/userDashboard.fxml
+++ b/src/main/resources/com/example/librarymanagementsystem2/userDashboard.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TableColumn?>
@@ -62,79 +63,79 @@
                                                 <String fx:value="shadow" />
                                             </styleClass>
                                             <children>
-                                                <AnchorPane layoutX="6.0" prefHeight="180.0" prefWidth="1036.0" stylesheets="@dashboardDesign.css" AnchorPane.bottomAnchor="370.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                <AnchorPane prefHeight="180.0" prefWidth="1036.0" stylesheets="@dashboardDesign.css" AnchorPane.bottomAnchor="370.4" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                     <styleClass>
                                                         <String fx:value="white-bg" />
                                                         <String fx:value="shadow" />
                                                     </styleClass>
                                                     <children>
-                                                        <AnchorPane layoutX="754.0" layoutY="8.0" prefHeight="158.0" prefWidth="241.0" styleClass="card" stylesheets="@dashboardDesign.css">
+                                                        <AnchorPane layoutX="803.0" layoutY="10.0" prefHeight="158.0" prefWidth="206.0" styleClass="card" stylesheets="@dashboardDesign.css">
                                                             <children>
                                                                 <FontAwesomeIcon fill="WHITE" glyphName="BOOK" layoutX="15.0" layoutY="95.0" size="4em" />
-                                                                <Label layoutX="47.0" layoutY="112.0" prefHeight="18.0" prefWidth="185.0" text="Total Borrowed Books" textFill="WHITE">
+                                                                <Label layoutX="47.0" layoutY="112.0" prefHeight="18.0" prefWidth="157.0" text="Total Borrowed Books" textFill="WHITE">
                                                                     <font>
                                                                         <Font name="Arial" size="15.0" />
                                                                     </font>
                                                                 </Label>
-                                                                <Label fx:id="dashboard_TBB" alignment="CENTER_RIGHT" layoutX="121.0" layoutY="14.0" prefHeight="30.0" prefWidth="109.0" text="0" textFill="WHITE">
+                                                                <Label fx:id="dashboard_TBB" alignment="CENTER_RIGHT" layoutX="121.0" layoutY="14.0" prefHeight="30.0" prefWidth="74.0" text="0" textFill="WHITE">
                                                                     <font>
                                                                         <Font size="20.0" />
                                                                     </font>
                                                                 </Label>
                                                             </children>
                                                         </AnchorPane>
-                                          <Label alignment="CENTER_RIGHT" layoutX="237.0" layoutY="22.0" prefHeight="20.0" prefWidth="111.0" text="Student's ID:">
+                                          <Label alignment="CENTER_RIGHT" layoutX="161.0" layoutY="22.0" prefHeight="20.0" prefWidth="111.0" text="Student's ID:">
                                              <font>
                                                 <Font size="15.0" />
                                              </font>
                                           </Label>
-                                          <Label alignment="CENTER_RIGHT" layoutX="237.0" layoutY="47.0" prefHeight="20.0" prefWidth="111.0" text="User Name:">
+                                          <Label alignment="CENTER_RIGHT" layoutX="161.0" layoutY="47.0" prefHeight="20.0" prefWidth="111.0" text="User Name:">
                                              <font>
                                                 <Font size="15.0" />
                                              </font>
                                           </Label>
-                                          <Label alignment="CENTER_RIGHT" layoutX="240.0" layoutY="74.0" prefHeight="20.0" prefWidth="110.0" text="Phone Number:">
+                                          <Label alignment="CENTER_RIGHT" layoutX="164.0" layoutY="74.0" prefHeight="20.0" prefWidth="110.0" text="Phone Number:">
                                              <font>
                                                 <Font size="15.0" />
                                              </font>
                                           </Label>
-                                          <Label alignment="CENTER_RIGHT" layoutX="240.0" layoutY="108.0" prefHeight="20.0" prefWidth="109.0" text="Email:">
+                                          <Label alignment="CENTER_RIGHT" layoutX="164.0" layoutY="108.0" prefHeight="20.0" prefWidth="109.0" text="Email:">
                                              <font>
                                                 <Font size="15.0" />
                                              </font>
                                           </Label>
-                                          <Label alignment="CENTER_RIGHT" layoutX="240.0" layoutY="138.0" prefHeight="20.0" prefWidth="111.0" text="Password:">
+                                          <Label alignment="CENTER_RIGHT" layoutX="164.0" layoutY="138.0" prefHeight="20.0" prefWidth="111.0" text="Password:">
                                              <font>
                                                 <Font size="15.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="dashboard_name" layoutX="361.0" layoutY="45.0" prefHeight="30.0" prefWidth="174.0" style="-fx-background-color: transparent;" styleClass="text-field1" stylesheets="@dashboardDesign.css">
+                                          <TextField fx:id="dashboard_name" layoutX="285.0" layoutY="45.0" prefHeight="30.0" prefWidth="160.0" style="-fx-background-color: transparent;" styleClass="text-field1" stylesheets="@dashboardDesign.css">
                                              <font>
                                                 <Font size="14.0" />
                                              </font></TextField>
-                                          <TextField fx:id="dashboard_phoneNumber" layoutX="362.0" layoutY="74.0" prefHeight="9.0" prefWidth="174.0" style="-fx-background-color: transparent;" styleClass="text-field1" stylesheets="@dashboardDesign.css">
+                                          <TextField fx:id="dashboard_phoneNumber" layoutX="286.0" layoutY="74.0" prefHeight="30.0" prefWidth="160.0" style="-fx-background-color: transparent;" styleClass="text-field1" stylesheets="@dashboardDesign.css">
                                              <font>
                                                 <Font size="14.0" />
                                              </font></TextField>
-                                          <TextField fx:id="dashBoard_email" layoutX="362.0" layoutY="104.0" prefHeight="7.0" prefWidth="174.0" style="-fx-background-color: transparent;" styleClass="text-field1" stylesheets="@dashboardDesign.css">
+                                          <TextField fx:id="dashBoard_email" layoutX="286.0" layoutY="104.0" prefHeight="30.0" prefWidth="160.0" style="-fx-background-color: transparent;" styleClass="text-field1" stylesheets="@dashboardDesign.css">
                                              <font>
                                                 <Font size="14.0" />
                                              </font></TextField>
-                                          <PasswordField fx:id="dashboard_password" layoutX="362.0" layoutY="134.0" prefHeight="22.0" prefWidth="174.0" style="-fx-background-color: transparent;" styleClass="text-field1" stylesheets="@dashboardDesign.css">
+                                          <PasswordField fx:id="dashboard_password" layoutX="286.0" layoutY="134.0" prefHeight="30.0" prefWidth="160.0" style="-fx-background-color: transparent;" styleClass="text-field1" stylesheets="@dashboardDesign.css">
                                              <font>
                                                 <Font size="14.0" />
                                              </font></PasswordField>
-                                          <Button fx:id="dashboard_updatebtn" layoutX="614.0" layoutY="45.0" mnemonicParsing="false" onAction="#updateUser" styleClass="add-btn" stylesheets="@dashboardDesign.css" text="UPDATE" textFill="WHITE">
+                                          <Button fx:id="dashboard_updatebtn" layoutX="512.0" layoutY="133.0" mnemonicParsing="false" onAction="#updateUser" styleClass="add-btn" stylesheets="@dashboardDesign.css" text="UPDATE" textFill="WHITE">
                                              <font>
                                                 <Font size="15.0" />
                                              </font>
                                           </Button>
-                                          <Button fx:id="dashboard_deletebtn" layoutX="614.0" layoutY="98.0" mnemonicParsing="false" onAction="#deleteUser" prefHeight="31.0" prefWidth="77.0" styleClass="add-btn" stylesheets="@dashboardDesign.css" text="DELETE" textFill="WHITE">
+                                          <Button fx:id="dashboard_deletebtn" layoutX="612.0" layoutY="133.0" mnemonicParsing="false" onAction="#deleteUser" prefHeight="31.0" prefWidth="77.0" styleClass="add-btn" stylesheets="@dashboardDesign.css" text="DELETE" textFill="WHITE">
                                              <font>
                                                 <Font size="15.0" />
                                              </font>
                                           </Button>
-                                          <AnchorPane layoutX="62.0" layoutY="8.0" prefHeight="164.0" prefWidth="114.0" stylesheets="@dashboardDesign.css">
+                                          <AnchorPane layoutX="14.0" layoutY="7.0" prefHeight="164.0" prefWidth="114.0" stylesheets="@dashboardDesign.css">
                                              <styleClass>
                                                 <String fx:value="white-bg" />
                                                 <String fx:value="shadow" />
@@ -151,11 +152,27 @@
                                                    </font></Button>
                                              </children>
                                           </AnchorPane>
-                                          <Label fx:id="dashboard_ID" layoutX="360.0" layoutY="22.0" prefHeight="22.0" prefWidth="148.0">
+                                          <Label fx:id="dashboard_ID" layoutX="284.0" layoutY="22.0" prefHeight="22.0" prefWidth="148.0">
                                              <font>
                                                 <Font size="15.0" />
                                              </font>
                                           </Label>
+                                          <ComboBox fx:id="dashboard_question" layoutX="569.0" layoutY="47.0" prefHeight="31.0" prefWidth="190.0" styleClass="text-field" stylesheets="@loginDesign.css" />
+                                          <Label alignment="CENTER_RIGHT" layoutX="471.0" layoutY="52.0" prefHeight="22.0" prefWidth="85.0" text="Question:">
+                                             <font>
+                                                <Font size="15.0" />
+                                             </font>
+                                          </Label>
+                                          <Label alignment="CENTER_RIGHT" layoutX="461.0" layoutY="98.0" prefHeight="22.0" prefWidth="98.0" text="Answer:">
+                                             <font>
+                                                <Font size="15.0" />
+                                             </font>
+                                          </Label>
+                                          <TextField fx:id="dashboard_answer" layoutX="569.0" layoutY="94.0" prefHeight="30.0" prefWidth="192.0" style="-fx-background-color: transparent;" styleClass="text-field1" stylesheets="@dashboardDesign.css">
+                                             <font>
+                                                <Font size="14.0" />
+                                             </font>
+                                          </TextField>
                                                     </children>
                                                 </AnchorPane>
                                                 <AnchorPane fx:id="userChartPane" layoutX="-5.6" layoutY="190.4" prefHeight="360.0" prefWidth="1030.0" stylesheets="@dashboardDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-6.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="190.0">
